force-app/main/default/objects/Registration_PE__e/Registration_PE__e.object-meta.xml
<CustomObject>
    <label>Registration PE</label>
    <pluralLabel>Registrations PE</pluralLabel>
</CustomObject>