force-app/main/default/objects/Registration_PE__e/fields/Chruch_City__c.field-meta.xml
<CustomField>
    <fullName>Chruch_City__c</fullName>
    <label>Chruch City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>