force-app/main/default/objects/Registration_PE__e/fields/Church_Phone__c.field-meta.xml
<CustomField>
    <fullName>Church_Phone__c</fullName>
    <label>Church Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>