force-app/main/default/objects/Registration_PE__e/fields/Church_Street__c.field-meta.xml
<CustomField>
    <fullName>Church_Street__c</fullName>
    <label>Church Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>