force-app/main/default/objects/Registration_PE__e/fields/Church_Zip__c.field-meta.xml
<CustomField>
    <fullName>Church_Zip__c</fullName>
    <label>Church Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>