force-app/main/default/objects/Registration_PE__e/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>