force-app/main/default/objects/Registration_PE__e/fields/Couple_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Couple_Registration_Id__c</fullName>
    <label>Couple Registration Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>