force-app/main/default/objects/Registration_PE__e/fields/ERT_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>ERT_Updated_Date__c</fullName>
    <description>ERT</description>
    <label>ERT Updated Date</label>
    <type>Date</type>
</CustomField>