force-app/main/default/objects/Registration_PE__e/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <label>Event Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>