force-app/main/default/objects/Registration_PE__e/fields/Event_End__c.field-meta.xml
<CustomField>
    <fullName>Event_End__c</fullName>
    <label>Event End</label>
    <type>Date</type>
</CustomField>