force-app/main/default/objects/Registration_PE__e/fields/Event_Start__c.field-meta.xml
<CustomField>
    <fullName>Event_Start__c</fullName>
    <label>Event Start</label>
    <type>Date</type>
</CustomField>