force-app/main/default/objects/Registration_PE__e/fields/External_Reg_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Reg_Id__c</fullName>
    <label>External Reg Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>