force-app/main/default/objects/Registration_PE__e/fields/Military_Location__c.field-meta.xml
<CustomField>
    <fullName>Military_Location__c</fullName>
    <label>Military Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>