force-app/main/default/objects/Registration_PE__e/fields/Ministry_Group__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Group__c</fullName>
    <label>Ministry Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>