force-app/main/default/objects/Registration_PE__e/fields/Ministry_Group_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Group_Submitted__c</fullName>
    <label>Ministry Group Submitted</label>
    <length>80</length>
    <type>Text</type>
</CustomField>