force-app/main/default/objects/Registration_PE__e/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <length>50</length>
    <type>Text</type>
</CustomField>