force-app/main/default/objects/Registration_PE__e/fields/Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Public_Group__c</fullName>
    <label>Public Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>