force-app/main/default/objects/Registration_PE__e/fields/Registrant_Type__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Type__c</fullName>
    <label>Registrant Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>