force-app/main/default/objects/Registration_PE__e/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>