force-app/main/default/objects/Registration_PE__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>25</length>
    <type>Text</type>
</CustomField>