force-app/main/default/objects/Registration_PE__e/fields/Spouse_Registration__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Registration__c</fullName>
    <label>Spouse Registration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>